inou/prp/tests/errors/ref_self_const_receiver.prp
/*
:name: ref_self_const_receiver
:type: error
:error: cannot call `ref self` method.*on const
:help: writes back into the caller's variable
*/

// Task 1k — `ref self` writes back into the receiver, so it needs a `mut`
// value receiver. A const (or a `type` binding) is rejected.

type t1 = (a:u32=nil, b:string="")

comb set_b(ref self:t1) {
  self.b = "foo"
}

const c:t1 = nil
c.set_b() // locate_error_here
